--- a/Client/_Imports.razor
+++ b/Client/_Imports.razor
@@ -6,5 +6,7 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
-@using BirdWatching.Client
-@using BirdWatching.Client.Layout
+@using Client
+@using Client.Layout
+@using BirdWatching.Shared.Model
+@using Newtonsoft.Json
