--- a/BlazorClient/Pages/Home.razor
+++ b/BlazorClient/Pages/Home.razor
@@ -1,7 +1,7 @@
-@page "/"
+﻿@page "/"
 
 <PageTitle>Home</PageTitle>
 
-<h1>Hello, world! This is awesome...</h1>
+<h1>Hello, world!</h1>
 
 Welcome to your new app.
