--- a/Client/Pages/Counter.razor
+++ b/Client/Pages/Counter.razor
@@ -1,8 +1,8 @@
-﻿@page "/counter"
+@page "/counter"
 
-<PageTitle>Counter</PageTitle>
+<PageTitle>Wonderful Counter</PageTitle>
 
-<h1>Counter</h1>
+<h1>Counter is very good</h1>
 
 <p role="status">Current count: @currentCount</p>
 
