--- a/Client/App.razor
+++ b/Client/App.razor
@@ -4,9 +4,9 @@
         <FocusOnNavigate RouteData="@routeData" Selector="h1" />
     </Found>
     <NotFound>
-        <PageTitle>Not found</PageTitle>
+        <PageTitle>Nenalezeno</PageTitle>
         <LayoutView Layout="@typeof(MainLayout)">
-            <p role="alert">Sorry, there's nothing at this address.</p>
+            <p role="alert">Nic takového se tu nenachází :(</p>
         </LayoutView>
     </NotFound>
 </Router>
