--- a/Client/Layout/MainLayout.razor
+++ b/Client/Layout/MainLayout.razor
@@ -9,7 +9,7 @@
     <SidebarSection>
         <Sidebar2 @ref="sidebar"
                   Href="/"
-                  ImageSrc="https://demos.blazorbootstrap.com/images/logo/logo-white.svg"
+                  ImageSrc="logo-sranda.png"
                   Title="Ptáčková aplikace"
                   BadgeText="v1.0.0"
                   DataProvider="Sidebar2DataProvider"
