--- a/Client/_Imports.razor
+++ b/Client/_Imports.razor
@@ -8,6 +8,8 @@
 @using Microsoft.JSInterop
 @using Client
 @using Client.Layout
+@using Client.Components
 @using BirdWatching.Shared.Model
+@using BirdWatching.Shared.Api
 @using Newtonsoft.Json
 @using BlazorBootstrap;
