--- a/Client/_Imports.razor
+++ b/Client/_Imports.razor
@@ -12,4 +12,5 @@
 @using BirdWatching.Shared.Model
 @using BirdWatching.Shared.Api
 @using Newtonsoft.Json
-@using BlazorBootstrap;
+@using BlazorBootstrap
+@using Blazored.LocalStorage
